# rag_assistant_api

./: .gitignore  .local-precommit-config.yaml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  local-precommit.sh  pyproject.toml  requirements.txt
config/: config.yaml  prompt_configs.yaml
config/agent-config/: default.yaml
config/data-config/: default.yaml
src/data/: sample_queries.txt
src/data/chroma_db_instantiation/: chroma-collections.parquet
src/data/to_integrate/: 1.txt  2.txt
src/rag_assistant_api/: database_generation_start.py  generate_chroma_db.py  init_flask_app.py  main.py
src/rag_assistant_api/agents/: agent_factory.py  agent_utils.py  data_structure.py  exceptions.py  prompts.py
src/rag_assistant_api/base_classes/: agent_base.py  database_handler.py  embedding_base.py
src/rag_assistant_api/credentials/: setup_credentials.py
src/rag_assistant_api/data_processing/: data_processing_utils.py
src/rag_assistant_api/data_structures/: data_structures.py
src/rag_assistant_api/database_models/: database_models.py
src/rag_assistant_api/instance/: database.db
src/rag_assistant_api/llm_functionalities/: openai_task_functions.py
src/rag_assistant_api/llm_tasks/: openai_task_functions.py  summarization.py
src/rag_assistant_api/local_database/: database_models.py
src/rag_assistant_api/utils/: agent_utils.py  data_processing_utils.py  file_loading.py
src/rag_assistant_api/vector_database/: config_schemas.py  data_processing_utils.py  (+2 more)
tests/fixtures/: fixtures_qa_agent.py
tests/rag_assistant_api/: conftest.py
(+70 files in other folders)
